--- a/Instructions/Labs/AZ-204_01_lab.md
+++ b/Instructions/Labs/AZ-204_01_lab.md
@@ -16,7 +16,7 @@ You're the owner of a startup organization and have been building an image galle
 
 After you complete this lab, you will be able to:
 
--   Create various apps by using App Service.
+-   [ ] Create various apps by using App Service.
 
 -   Configure application settings for an app.
 
